<resources>
    <string name="app_name">Health Life</string>
    <string name="activity_start_checking_label">Провіряєм логування...</string>
    <string name="activity_login_label">Вхід</string>
    <string name="activity_hellouser">Привіт</string>
    <string name="activity_new">Привіт</string>
    <string name="hello_user">Привет, %1$s</string>

    <string name="reg_button_text">Далі</string>
    <string name="reg_button_text_size">35dp</string>
    <string name="reg_margin">20dp</string>
    <string name="reg_tv_text_size">35dp</string>
    <string name="reg_edit_text_size">35dp</string>
    <string name="reg_kg">кг.</string>

    <string name="reg1_user_tv_text">Вага:</string>
    <string name="reg1_user_edit_text">Введіть свою вагу</string>

    <string name="reg2_user_tv_text">Ім\'я:</string>
    <string name="reg2_user_edit_text">Введіть своє ім\'я</string>

    <string name="reg3_user_tv_text">Вік:</string>
    <string name="reg3_user_edit_text">Введіть свій вік</string>
    <string name="title_activity_separate_login">Sign in</string>
    <string name="prompt_email">Почтова адреса</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Війдіть або зареєструйтесь</string>
    <string name="action_sign_in_short">Війдіть</string>
    <string name="welcome">"Вітаю !"</string>
    <string name="invalid_username">Невірний користувач</string>
    <string name="invalid_password">Пароль повинен бути більше 5 символів</string>
    <string name="login_failed">"Користувач/пароль неврні"</string>
    <string name="title_activity_login">Війдіть</string>
    <string name="title_activity_main_form">MainForm</string>
    <string name="title_home">Щоденник</string>
    <string name="title_dashboard">Звички</string>
    <string name="title_notifications">Рекомендації</string>
    <string name="title_profile">Профайл</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Привіт</string>

</resources>

