<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration01">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reg1_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg1_user_tv_text"
        android:textSize="@string/reg_tv_text_size"
        android:layout_margin="@string/reg_margin"
        />

    <EditText
        android:id="@+id/reg1_age_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg1_user_edit_text"
        android:textSize="@string/reg_edit_text_size"
        android:textStyle="italic"
        />
</LinearLayout>

    <Button
        android:id="@+id/button_reg01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/reg_button_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="40dip"
        android:background="@android:color/transparent"/>

</RelativeLayout>