<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration04">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/reg4_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:layout_margin="30dp"
        android:text="@string/reg1_user_tv_text"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/reg4_user_edit_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:inputType="number"
            android:textSize="50dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_kg" />
    </LinearLayout>
</LinearLayout>

    <Button
        android:id="@+id/button_reg04_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/reg_button_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="40dp"
        android:background="@android:color/transparent"/>
</RelativeLayout>